still trying to fix field overflow in modal; added overflow hidden

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -101,7 +101,3 @@ h2 span {
 .modal {
   font-family: 'cantarellregular', sans-serif;
 }
-
-.saying-field {
-  width: 100px;
-  }
